hcx-984:mock-payor-app changes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/src/images/swasth_logo_1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Self Service Portal - HCX</title>
+    <title>Mock Payor App - HCX</title>
   </head>
   <body>
     <div id="root"></div>
