notification and comm added with agent info

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <link rel="icon" href="/src/images/swasth_logo_1.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mock Payor App - HCX</title>
+    <script type="application/javascript">
+      var global = window;
+    </script>
   </head>
   <body>
     <div id="root"></div>
